--- a/event.html
+++ b/event.html
@@ -80,7 +80,7 @@
                     <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
-                    <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Up coming Events</a></button> 
+                    <button type="button" class="btn btn-primary"><a href="upcoming.html" class="nav-link">Up coming Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
                     <button type="button" class="btn btn-primary"><a href="past.html" class="nav-link">Past Events</a></button> 
