--- a/past.html
+++ b/past.html
@@ -71,18 +71,18 @@
             <!-- nav menu -->
 
             <div class="collapse navbar-collapse" id="wbnav">
-              <ul class="navbar-nav mr-auto" id="wbnav">
-                <li class="nav-itemsub">
-                    <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live Events</a></button> 
-                </li>
-                <li class="nav-itemsub">
-                    <button type="button" class="btn btn-primary"><a href="#" class="nav-link">Up coming Events</a></button> 
-                </li>
-                <li class="nav-itemsub">
-                    <button type="button" class="btn btn-primary"><a href="past.html" class="nav-link">Past Events</a></button> 
-                </li>
-            
-              </ul>
+                <ul class="navbar-nav mr-auto" id="wbnav">
+                    <li class="nav-itemsub">
+                        <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live Events</a></button> 
+                    </li>
+                    <li class="nav-itemsub">
+                        <button type="button" class="btn btn-primary"><a href="upcoming.html" class="nav-link">Up coming Events</a></button> 
+                    </li>
+                    <li class="nav-itemsub">
+                        <button type="button" class="btn btn-primary"><a href="past.html" class="nav-link">Past Events</a></button> 
+                    </li>
+                
+                  </ul>
 
             </div>
           </nav>
