--- a/upcoming.html
+++ b/upcoming.html
@@ -93,28 +93,7 @@
       </div>
 
       <div class="container">
-        <h2>Event Name:- Krishi Vikalp</h2>
-        <figure class="figure">
-            <img src="/img/Krishi.jpgup" class="figure-img img-fluid rounded" alt="...">
-            <figcaption class="figure-caption text-end" style="color:black"><H5>
-                Event Date- 25th February 2023
-<br>
-                Event Duration- 02 – 03 hrs
-                
-                Event Venue- Sri Sukhmani Institute of Management, Dwarka, New Delhi
-                <br>
-                (https://goo.gl/maps/1UNyqo5NwR8kTsTVA)
-                <br>
-                Sri Sukhmani Institute of Management, Dwarka, New Delhi, and MangosOrange is organizing a Startup India Business Case Presentation-KRISHI- VIKALP, an event for budding managers(PGDM students) to showcase their entrepreneurial skills by presenting innovative ideas that can bring about revolution in farming in India. The event is powered by Gohackathon.in
-                <br>
-                Event Uniqueness-
-                <br>
-                This event brings real agriculture problem statements to different teams of the college, the teams identify specific problem statements for which they will develop solutions. Professional agriculture industry mentors evaluate the level and choose the winning team.
-               <br> The story does not end here, it goes beyond that, here most of the hackathons end up with the winning team, and in this event, the opportunity is for everybody who participates in it.
-               <br> All the Participating teams who developed their solutions (both winning and losing) will be now assigned to agriculture industry mentors for specific periods. The teams will focus on developing the solution under the mentorship of the expert.
-               <br> Go hackathon aims at providing continuous help and support to all the participants of the events and developing a life-long bond of learning, earning, and contributing back. The aim is to impact industry and society by providing continuous innovative solutions to real agriculture problems faced by the agriculture industry.</h5></figure> 
-
-      </div>
+<img src="/img/up.png" alt=""> </div>
 
 
 
