--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="mr-auto"></div>
+                    <!-- <div class="mr-auto"></div> -->
                     <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">HOME
@@ -71,39 +71,46 @@
             </nav>
         </div>
     </header>
-<section class="section-0">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7  bannertext">
-                <h6>BEST PLATFORM</h6>
-                <h1>GO HACKATHON</h1>
-                <p>
-                    Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                    nurture talent among budding tech professional.<br>
-                    We create an eco-system of industry academia partnership and help in continuous and
-                    sustainable development of innovative ideas, which are impactful for the growing economy and
-                    society.Industry today is looking for talented students who are equipped and experience with
-                    advanced skills, software, attitude and updated industry best practices.<br>
-                    We create an eco-system of industry academia partnership and help in continuous and
-                    sustainable development of innovative ideas, which are impactful for the growing economy and
-                    society.
-                </p>
-                <button class="btn btn-primary px-5 py-2 primary-btn">
-                    NOW MORE
-                </button>
-            </div>
-            <div class="col-lg-5 bannerimage">
-                <img src="img/development2" alt="developer2" />
+    <section class="section-0">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7  bannertext">
+                    <h6>BEST PLATFORM</h6>
+                    <h1>GO HACKATHON</h1>
+                    <p>
+                        Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                        nurture talent among budding tech professional.<br>
+                        We create an eco-system of industry academia partnership and help in continuous and
+                        sustainable development of innovative ideas, which are impactful for the growing economy and
+                        society.Industry today is looking for talented students who are equipped and experience with
+                        advanced skills, software, attitude and updated industry best practices.<br>
+                        We create an eco-system of industry academia partnership and help in continuous and
+                        sustainable development of innovative ideas, which are impactful for the growing economy and
+                        society.
+                    </p>
+                    <button class="btn btn-primary px-5 py-2 primary-btn">
+                        NOW MORE
+                    </button>
+                </div>
+                <div class="col-lg-5 bannerimage">
+                    <img src="img/development2" alt="developer2" />
 
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
     <section class="sponsors">
-        <img src="" alt="">
+            <div class="content text-center">
+                <h1>SPONSORS AND ASSOCIATES</h1>
+            </div>
+
+                <img  class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
+                <img   class="simg"src="sponsorsimg/tp-agri-logo.png" alt="agritech">
+                <img  class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
+                <img  class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
     </section>
     <main>
-        <section class="section-1">
+        <section class="section-1 p-0">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-6 col-12">
@@ -112,7 +119,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-2 container-fluid p-0">
+        <section class="section-2  p-0">
             <div class="cover">
                 <div class="overlay"></div>
                 <div class="content text-center">
@@ -122,7 +129,7 @@
                     </p>
                 </div>
             </div>
-            <div class="container-fluid text-center">
+            <div class=" text-center">
                 <div class="numbers d-flex flex-md-row flex-wrap justify-content-center">
                     <div class="rect">
                         <h1>45</h1>
@@ -142,7 +149,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="purchase text-center">
                 <h1>Courses, Practice Sets, Quizzes</h1>
@@ -197,7 +203,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-3 container-fluid p-0 text-center">
+        <section class="section-3  p-0 text-center">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>Download Our App for all Platform</h1>
@@ -206,7 +212,7 @@
                         omnis quod possimus odit
                     </p>
                 </div>
-            </div>
+            </div> -->
             <div class="platform row">
                 <div class="col-md-6 col-sm-12 text-right">
                     <div class="desktop shadow-lg">
@@ -327,10 +333,10 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section> --> -->
     </main>
     <footer>
-        <div class="container-fluid p-0">
+        <div class=" p-0">
             <div class="row text-left">
                 <div class="col-md-5 col-sm-5">
                     <h4 class="text-light">About us</h4>
