changes in about

--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>About Us</title>
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,13 +21,17 @@
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
                     <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-align-right text-dark"></i>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME
+                            <!-- <a class="nav-link" href="#">HOME
                                 <span class="sr-only">(current)</span>
-                            </a>
+                            </a> -->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="about.html">ABOUT US</a>
@@ -84,6 +90,27 @@
             <td><img class="imgofabout" src="img/development2" alt="Angela profile photo"></td>
         </tr>
     </table>
+    <!-- <table cellspacing="10" class="aboutsection"> -->
+        <!-- <section class="aboutsection">
+        <div class="aboutsectiondiv">
+            <span class="aboutdescription">
+                <h1>About Us</h1>
+                <h2>Go Hackathon</h2>
+                <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                    nurture talent among budding tech professional.<br>
+                    Industry today is looking for talented students who are equipped and experience with
+                    advanced skills, software, attitude and updated industry best practices.<br>
+                    We create an eco-system of industry academia partnership and help in continuous and
+                    sustainable development of innovative ideas, which are impactful for the growing economy and
+                    society.<br>
+                    Go hackathon thrives to provide best nurturing, mentorship, skills and professional
+                    opportunities to its members and participants.
+                    We conduct series of events, seminars, hackathons, internships and Projects.<br></p>
+                </span>
+            <span class="aboutdescriptionimg"><img class="imgofabout" src="img/development2" alt="Angela profile photo"></span>
+        </div>
+    </section> -->
+    <!-- </table> -->
     <div class="bottompara">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, cum nisi ipsam eius similique ut eaque sit nam impedit quos deleniti praesentium voluptates maxime. Harum pariatur ullam eveniet nam maxime.
             Illum architecto exercitationem, reprehenderit velit dolores eos quos ullam ut tempore nisi, voluptas quia iure necessitatibus eaque! Id similique aut excepturi eveniet numquam facilis ab temporibus sit deleniti, porro fugiat.
