--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
         </div>
     </section>
     <section class="sponsors">
-            <div class="content text-center">
-                <h1>SPONSORS AND ASSOCIATES</h1>
-            </div>
+        <div class="content text-center">
+            <h1>SPONSORS AND ASSOCIATES</h1>
+        </div>
 
-                <img  class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
-                <img   class="simg"src="sponsorsimg/tp-agri-logo.png" alt="agritech">
-                <img  class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
-                <img  class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
+        <img class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
+        <img class="simg" src="sponsorsimg/tp-agri-logo.png" alt="agritech">
+        <img class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
+        <img class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
     </section>
     <main>
         <section class="section-1 p-0">
@@ -340,8 +340,8 @@
             <div class="row text-left">
                 <div class="col-md-5 col-sm-5">
                     <h4 class="text-light">About us</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea
-                        similique illum corrupti</p>
+                    <p class="text-muted">Go Hackathon comprises of eminent Industry professionals, educators and
+                        students meant to nurture talent among budding tech professionals.</p>
                     <p class="pt-4 text-muted">Copyright ©2019 All rights reserved | Terms and conditions
                     </p>
                 </div>
