--- a/dashboard.html
+++ b/dashboard.html
@@ -15,11 +15,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
  <body>
-  <header>
+  <!-- <header>
     <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">
-                <!-- <i class="fas fa-book-reader fa-2x mx-3"></i>Go Hackathon -->
                 <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
 
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -76,6 +75,63 @@
                                 </div>
                             </div>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header> -->
+<header>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#">
+                <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- <div class="mr-auto"></div> -->
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">HOME
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="about.html">ABOUT US</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a href="#" class="nav-link">EVENTS</a>
+                            <div class="dropdown-content">
+                                <a href="#">LIVE EVENTS</a>
+                                <a href="#">UPCOMMING EVENTS</a>
+                                <a href="#">PAST EVENTS</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a href="#" class="nav-link">HACKATHON</a>
+                            <div class="dropdown-content">
+                                <a href="#">LEADERBOARD</a>
+                                <a href="#">PRACTICE SET</a>
+                                <a href="#">PARTICIPANTS</a>
+                                <a href="#">WINNERS</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">GALLERY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT US</a>
+                    </li>
+                    <li>
+                        <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
+                    </li>
+                    <li>
+                        <img src="img/profilephoto.png" alt="" class="profilephoto">
+                    </li>
+                    <li>
+                        <img src="img/crossback.png" alt="" class="crossback">
                     </li>
                 </ul>
             </div>
