Changes in the dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -124,14 +124,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">CONTACT US</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
-                    </li>
+                    </li> -->
                     <li>
                         <img src="img/profilephoto.png" alt="" class="profilephoto">
                     </li>
                     <li>
-                        <img src="img/crossback.png" alt="" class="crossback">
+                        <img src="img/drop-down-arrow-4.png" alt="" class="dropdownprofile">
                     </li>
                 </ul>
             </div>
