linked the buttons

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
-                                <a href="#" class="nav-link">EVENTS</a>
+                                <a href="event.html" class="nav-link">EVENTS</a>
                                 <div class="dropdown-content">
                                     <a href="#">LIVE EVENTS</a>
                                     <a href="#">UPCOMMING EVENTS</a>
@@ -48,23 +48,26 @@
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
-                                <a href="#" class="nav-link">HACKATHON</a>
+                                <a href="event.html" class="nav-link">HACKATHON</a>
                                 <div class="dropdown-content">
-                                    <a href="#">LEADERBOARD</a>
+                                    <a href="leaderboard.html">LEADERBOARD</a>
                                     <a href="#">PRACTICE SET</a>
                                     <a href="#">PARTICIPANTS</a>
-                                    <a href="#">WINNERS</a>
+                                    <a href="leaderboard.html">WINNERS</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">GALLERY</a>
+                            <a class="nav-link" href="gallery.html">GALLERY</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">CONTACT US</a>
                         </li>
                         <li>
-                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
+                            <a href="login.html">
+                                <button class="btn btn-primary px-5 py-2 primary-btn"
+                                    id="login-btn">Login/Signup</button>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -88,9 +91,11 @@
                         sustainable development of innovative ideas, which are impactful for the growing economy and
                         society.
                     </p>
+                    <a href="about.html">
                     <button class="btn btn-primary px-5 py-2 primary-btn">
                         NOW MORE
                     </button>
+                </a>
                 </div>
                 <div class="col-lg-5 bannerimage">
                     <img src="img/development2" alt="developer2" />
@@ -137,7 +142,9 @@
                     </div>
                     <div class="rect">
                         <h1>45</h1>
+                        <a href="event.html">
                         <p>Coding Competitions</p>
+                    </a>
                     </div>
                     <div class="rect">
                         <h1>45</h1>
