--- a/dashboard.html
+++ b/dashboard.html
@@ -15,72 +15,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
  <body>
-  <!-- <header>
-    <div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="#">
-                <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <div class="mr-auto"></div>
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">HOME
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="about.html">ABOUT US</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <div class="dropdown">
-                            <a href="#" class="nav-link">EVENTS</a>
-                            <div class="dropdown-content">
-                                <a href="#">LIVE EVENTS</a>
-                                <a href="#">UPCOMMING EVENTS</a>
-                                <a href="#">PAST EVENTS</a>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <div class="dropdown">
-                            <a href="#" class="nav-link">HACKATHON</a>
-                            <div class="dropdown-content">
-                                <a href="#">LEADERBOARD</a>
-                                <a href="#">PRACTICE SET</a>
-                                <a href="#">PARTICIPANTS</a>
-                                <a href="#">WINNERS</a>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">GALLERY</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT US</a>
-                    </li>
-                    <li>
-                        <div class="col-div-6">
-                            <div class="profile">
-                                <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" class="pro-img" />
-                                <p>USERNAME <span>STUDENT</span></p>
-                                <div class="dropdown-content">
-                                    <a href="#"><button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button></a>
-                                    <a href="#">Events</a>
-                                    <a href="#">Courses</a>
-                                    <a href="#">Projects</a>
-                                    <a href="#">Gallery</a>
-                                    <a href="#">Your Payments</a>
-                                    <a href="#">Settings</a>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-</header> -->
 <header>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg">
@@ -212,6 +146,16 @@
     <td>Idea</td>
     <td>none</td>
   </tr>
+  <tr>
+    <td>Event</td>
+    <td>Idea</td>
+    <td>none</td>
+  </tr>
+   <tr>
+    <td>Event</td>
+    <td>Idea</td>
+    <td>none</td>
+  </tr>
   
   
 </table>
@@ -222,7 +166,7 @@
 	<div class="col-div-4">
 		<div class="box-4">
 		<div class="content-box">
-			<p>Rank <span>See All</span></p>
+			<p>Score <span>See All</span></p>
 
 			<div class="circle-wrap">
     <div class="circle">
@@ -232,7 +176,7 @@
       <div class="mask half">
         <div class="fill"></div>
       </div>
-      <div class="inside-circle"> 7th</div>
+      <div class="inside-circle"> 700</div>
     </div>
   </div>
 		</div>
@@ -285,10 +229,6 @@
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script>
-
-
-</script>
 
 </body>
 
