sponsors section ready

--- a/index.html
+++ b/index.html
@@ -100,14 +100,29 @@
         </div>
     </section>
     <section class="sponsors">
-            <div class="content text-center">
-                <h1>SPONSORS AND ASSOCIATES</h1>
-            </div>
+        <div class="content text-center">
+            <h2 text-align="center">SPONSORS AND ASSOCIATES</h2>
+        </div>
 
-                <img  class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
-                <img   class="simg"src="sponsorsimg/tp-agri-logo.png" alt="agritech">
-                <img  class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
-                <img  class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
+        <div class="images">
+            <div class="img3">
+
+                <img  width="350" height="152" class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
+            </div>
+            
+
+            <div class="img2">
+                <img width="350" height="152" class="simg" src="sponsorsimg/tp-agri-logo.png" alt="agritech">
+            </div>
+            <div class="img1">
+                <img class="simg" width="350" height="152" src="sponsorsimg/Skyfield-Agritech.png"
+                    alt="Skyfield-Agritech">
+            </div>
+            
+            <div class="img4">
+                <img  width="350" height="152" class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
+            </div>
+        </div>
     </section>
     <main>
         <section class="section-1 p-0">
@@ -388,3 +403,6 @@
 </body>
 
 </html>
+
+
+<!-- how to give space in html -->
