--- a/detail.html
+++ b/detail.html
@@ -14,15 +14,10 @@
 </head>
 <body class="eventbody">
     <header>
-        <div class="container-fluid p-0">
+        <div class="container-fluid">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
-                    <!-- <i class="fas fa-book-reader fa-2x mx-3"></i>Go Hackathon -->
-                    <img src="logo.jpg" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-right text-light"></i>
-                </button>
+                    <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="mr-auto"></div>
                     <ul class="navbar-nav">
@@ -32,25 +27,37 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">HACKATHONS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">COURSES</a>
+                            <a class="nav-link active" href="about.html">ABOUT US</a>
                         </li>
                         <li class="nav-item dropdown">
                             <div class="dropdown">
                                 <a href="#" class="nav-link">EVENTS</a>
                                 <div class="dropdown-content">
-                                    <a href="#">CODING COMPETITIONS</a>
-                                    <a href="#">STARTUP</a>
+                                    <a href="#">LIVE EVENTS</a>
+                                    <a href="#">UPCOMMING EVENTS</a>
+                                    <a href="#">PAST EVENTS</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a href="#" class="nav-link">HACKATHON</a>
+                                <div class="dropdown-content">
+                                    <a href="#">LEADERBOARD</a>
+                                    <a href="#">PRACTICE SET</a>
+                                    <a href="#">PARTICIPANTS</a>
+                                    <a href="#">WINNERS</a>
                                 </div>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#">GALLERY</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">CONTACT US</a>
+                        </li>
+                        <li>
+                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
                         </li>
                     </ul>
                 </div>
@@ -95,7 +102,7 @@
       <div class="container">
         <h2>Event Name:- Krishi Vikalp</h2>
         <figure class="figure">
-            <img src="/img/Krishi.jpgup" class="figure-img img-fluid rounded" alt="...">
+            <img src="/img/Krishi.jpg" class="figure-img img-fluid rounded" alt="...">
             <figcaption class="figure-caption text-end" style="color:black"><H5>
                 Event Date- 25th February 2023
 <br>
