--- a/event.html
+++ b/event.html
@@ -17,50 +17,57 @@
 </head>
 
 <body class="eventbody">
-    <header>
-        <div class="container-fluid p-0">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="#">
-                    <!-- <i class="fas fa-book-reader fa-2x mx-3"></i>Go Hackathon -->
-                    <img src="logo.jpg" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-align-right text-light"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="mr-auto"></div>
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">HACKATHONS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">COURSES</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <div class="dropdown">
-                                <a href="#" class="nav-link">EVENTS</a>
-                                <div class="dropdown-content">
-                                    <a href="#">CODING COMPETITIONS</a>
-                                    <a href="#">STARTUP</a>
-                                </div>
+  <header>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="#">
+                <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="mr-auto"></div>
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">HOME
+                            <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="about.html">ABOUT US</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a href="#" class="nav-link">EVENTS</a>
+                            <div class="dropdown-content">
+                                <a href="#">LIVE EVENTS</a>
+                                <a href="#">UPCOMMING EVENTS</a>
+                                <a href="#">PAST EVENTS</a>
                             </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">CONTACT US</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <div class="dropdown">
+                            <a href="#" class="nav-link">HACKATHON</a>
+                            <div class="dropdown-content">
+                                <a href="#">LEADERBOARD</a>
+                                <a href="#">PRACTICE SET</a>
+                                <a href="#">PARTICIPANTS</a>
+                                <a href="#">WINNERS</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">GALLERY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT US</a>
+                    </li>
+                    <li>
+                        <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
     <div class="main">
       <div class="event2bar">
 
@@ -80,7 +87,7 @@
                     <button type="button" class="btn btn-primary"><a href="event.html" class="nav-link">Live Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
-                    <button type="button" class="btn btn-primary"><a href="upcoming.html" class="nav-link">Up coming Events</a></button> 
+                    <button type="button" class="btn btn-primary"><a href="" class="nav-link">Up coming Events</a></button> 
                 </li>
                 <li class="nav-itemsub">
                     <button type="button" class="btn btn-primary"><a href="past.html" class="nav-link">Past Events</a></button> 
