--- a/survey.html
+++ b/survey.html
@@ -61,56 +61,34 @@
             </div>
             <!-- end of select section -->
 
-            <!-- radio button section -->
-            <div class="form-group">
-                <p id="quest">How you come to know about WEBHUB ?</p>
-                <label for="">
-                    <input type="radio" name="source" value="freinds"
-                    class="inputRadio"
-                    checked> Friends
-                </label>
-                <label for="">
-                    <input type="radio" name="source" value="tv-ads"
-                    class="inputRadio"
-                    >TV Ads
-                </label>
-                <label for="">
-                    <input type="radio" name="source" value="social-media"
-                    class="inputRadio"
-                    > Social Media
-                </label>
-                <label for="">
-                    <input type="radio" name="source" value="newspaper"
-                    class="inputRadio"
-                    > Newspaper
-                </label>
-                <label for="">
-                    <input type="radio" name="source" value="other"
-                    class="inputRadio"
-                    > Other
-                </label>
-            </div>
-            <!-- end of radio button -->
+   
 
             <!-- Checkbox section -->
             <div class="form-group">
-                <p id="quest">Would you like to see improved ? </p>
+                <p id="quest">Did you meet your exceptation? </p>
                 <label for="">
-                    <input type="checkbox" name="prefer" class="checkbox" value="front-end-dev"> Front-end Developer
+                    <input type="checkbox" name="prefer" class="checkbox" value="front-end-dev"> Yes 
                 </label>
                 <label for="">
-                    <input type="checkbox" name="prefer" class="checkbox" value="back-end-dev"> Back-end Developer
+                    <input type="checkbox" name="prefer" class="checkbox" value="back-end-dev"> No
                 </label>
-                <label for="">
-                    <input type="checkbox" name="prefer" class="checkbox" value="app-dev">  Android App Developer
-                </label>
-                <label for="">
-                    <input type="checkbox" name="prefer" class="checkbox" value="soft-engineering"> Software Engineering
-                </label>
-                <label for="">
-                    <input type="checkbox" name="prefer" class="checkbox" value="other"> Other
-                </label>
-            </div>
+                <div class="form-group">
+                    <p id="quest">Did the event help you with new learnings or knowledge? </p>
+                    <label for="">
+                        <input type="checkbox" name="prefer" class="checkbox" value="front-end-dev"> Yes 
+                    </label>
+                    <label for="">
+                        <input type="checkbox" name="prefer" class="checkbox" value="back-end-dev"> No
+                    </label>
+                    <div class="form-group">
+                        <p id="quest">Have you attended the events before?</p>
+                        <label for="">
+                            <input type="checkbox" name="prefer" class="checkbox" value="front-end-dev"> Yes 
+                        </label>
+                        <label for="">
+                            <input type="checkbox" name="prefer" class="checkbox" value="back-end-dev"> No
+                        </label>
+    
             <!-- End of checkbox section -->
 
             <!-- Textarea section -->
