--- a/survey.html
+++ b/survey.html
@@ -119,7 +119,7 @@
                 <textarea name="feedback"  cols="30" rows="5"  id="feedback" class="textarea" placeholder="Enter your feedback here..."></textarea>
             </div>
             <div class="form-group">
-                <button type="submit" id="submit" class="btn">Submit</button>
+                <button type="submit" id="submit" class="btn btn-primary px-5 py-2 primary-btn">Submit</button>
             </div>
         </form>
     </div>
