--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                         society.
                     </p>
                     <a href="about.html">
-                    <button class="btn btn-primary px-5 py-2 primary-btn">
-                        NOW MORE
-                    </button>
-                </a>
+                        <button class="btn btn-primary px-5 py-2 primary-btn">
+                            NOW MORE
+                        </button>
+                    </a>
                 </div>
                 <div class="col-lg-5 bannerimage">
                     <img src="img/development2" alt="developer2" />
@@ -334,8 +334,14 @@
                     </div>
                 </div>
             </div>
-        </section> --> -->
+        </section> -->
+        
     </main>
+    <div class="surveybutton">
+        <a class="survey-btn" href="survey.html">
+            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Survey</button>
+        </a>
+    </div>
     <footer>
         <div class=" p-0">
             <div class="row text-left">
