--- a/index.html
+++ b/index.html
@@ -101,14 +101,24 @@
         </div>
     </section>
     <section class="sponsors">
-            <div class="content text-center">
-                <h1>SPONSORS AND ASSOCIATES</h1>
-            </div>
+        <div class="content text-center">
+            <h2 text-align="center">SPONSORS AND ASSOCIATES</h2>
+        </div>
+        <div class="images">
 
-                <img  class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
-                <img   class="simg"src="sponsorsimg/tp-agri-logo.png" alt="agritech">
-                <img  class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
-                <img  class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
+            <div class="img1">
+                <img class="simg" src="sponsorsimg/SSIM-LOGO-1.png" alt="ssim">
+            </div>
+            <div class="img2">
+                <img class="simg" src="sponsorsimg/tp-agri-logo.png" alt="agritech">
+            </div>
+            <div class="img3">
+                <img class="simg" src="sponsorsimg/Skyfield-Agritech.png" alt="Skyfield-Agritech">
+            </div>
+            <div class="img4">
+                <img class="simg" src="sponsorsimg/MOLogo.png" alt="molong">
+            </div>
+        </div>
     </section>
     <main>
         <section class="section-1 p-0">
@@ -335,7 +345,7 @@
                 </div>
             </div>
         </section> -->
-        
+
     </main>
     <div class="surveybutton">
         <a class="survey-btn" href="survey.html">
