--- a/leaderboard.html
+++ b/leaderboard.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./Style.css" />
+        <link rel="stylesheet" href="./style.css" />
    </head>
    <body>
 
@@ -93,10 +93,6 @@
         </div>
     </header>
 
-<<<<<<< HEAD
-
-=======
->>>>>>> f25e2e60139fe3ae04030292288d8129bdc3c2a1
     <div class="leaderboard">
         <div class="description">
             <h3>LEADER BOARD </h3>
@@ -131,7 +127,7 @@
                   </div>
               
                 </div>
-                <div class="card">
+                <div class="card ">
                   <img src="img/2.jpg" class="card__image">
                   <p class="card__name">Riya</p>
                   <div class="grid-container">
