--- a/about.html
+++ b/about.html
@@ -1,42 +1,141 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
     <meta charset="utf-8">
     <title>About Us</title>
     <link rel="stylesheet" href="about.css">
-    <style>
-
-    </style>
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
+        rel="stylesheet">
 </head>
-
 <body>
-    <table cellspacing="10">
+    <header>
+        <div class="container-fluid p-0">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="#">
+                    <img class="logoimg" src="img/logowithoutbg.png" alt=""></a>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="mr-auto"></div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">HOME
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="about.html">ABOUT US</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a href="#" class="nav-link">EVENTS</a>
+                                <div class="dropdown-content">
+                                    <a href="#">LIVE EVENTS</a>
+                                    <a href="#">UPCOMMING EVENTS</a>
+                                    <a href="#">PAST EVENTS</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <div class="dropdown">
+                                <a href="#" class="nav-link">HACKATHON</a>
+                                <div class="dropdown-content">
+                                    <a href="#">LEADERBOARD</a>
+                                    <a href="#">PRACTICE SET</a>
+                                    <a href="#">PARTICIPANTS</a>
+                                    <a href="#">WINNERS</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">GALLERY</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CONTACT US</a>
+                        </li>
+                        <li>
+                            <button class="btn btn-primary px-5 py-2 primary-btn" id="login-btn">Login/Signup</button>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <table cellspacing="10" class="aboutsection">
         <tr>
-<<<<<<< HEAD
-            <td><img src="img/developer1.png.jpeg" alt="Angela profile photo"></td>
-=======
-            <td><img src="img/developer1.jpeg" alt="Angela profile photo"></td>
->>>>>>> c357b528f2f4dade3af60442a9fb131691deb6a5
             <td>
                 <h1>About Us</h1>
-                <h2>GOHackathon</h2>
-                <p><i>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
-                        nurture talent among budding tech professional.<br>
-                        Industry today is looking for talented students who are equipped and experience with
-                        advanced skills, software, attitude and updated industry best practices.<br>
-                        We create an eco-system of industry academia partnership and help in continuous and
-                        sustainable development of innovative ideas, which are impactful for the growing economy and
-                        society.<br>
-                        Go hackathon thrives to provide best nurturing, mentorship, skills and professional
-                        opportunities to its members and participants.
-                        We conduct series of events, seminars, hackathons, internships and Projects.<br></i></p>
-
+                <h2>Go Hackathon</h2>
+                <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                    nurture talent among budding tech professional.<br>
+                    Industry today is looking for talented students who are equipped and experience with
+                    advanced skills, software, attitude and updated industry best practices.<br>
+                    We create an eco-system of industry academia partnership and help in continuous and
+                    sustainable development of innovative ideas, which are impactful for the growing economy and
+                    society.<br>
+                    Go hackathon thrives to provide best nurturing, mentorship, skills and professional
+                    opportunities to its members and participants.
+                    We conduct series of events, seminars, hackathons, internships and Projects.<br></p>
             </td>
+            <td><img class="imgofabout" src="img/development2" alt="Angela profile photo"></td>
         </tr>
     </table>
-
-
+    <div class="bottompara">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, cum nisi ipsam eius similique ut eaque sit nam impedit quos deleniti praesentium voluptates maxime. Harum pariatur ullam eveniet nam maxime.
+            Illum architecto exercitationem, reprehenderit velit dolores eos quos ullam ut tempore nisi, voluptas quia iure necessitatibus eaque! Id similique aut excepturi eveniet numquam facilis ab temporibus sit deleniti, porro fugiat.
+            Labore necessitatibus possimus eligendi tenetur accusamus omnis ad repellat magni perspiciatis maiores! Ullam, vel omnis modi doloribus sunt fugiat provident pariatur quaerat quam eaque eos temporibus veritatis cumque velit architecto!
+            Ab eveniet iure aperiam iusto possimus nobis debitis quam earum veniam sapiente voluptatum perferendis labore, porro beatae, laboriosam autem assumenda minima recusandae magnam! Consequuntur unde quidem facere? Alias, sit labore.
+            Atque non, ipsam explicabo impedit bis sapiente ipsum deserunt earum itaque inventore officiis consequatur facere quibusdam vero ex tempora, optio praesentium sequi, quia rerum illum deleniti. Facilis, modi.
+            Aperiam voluptates eum expedita doloribus sapiente fuga ratione quibusdam magni aliquid necessitatibus incidunt vel delectus natus odio nulla ut, iusto hic vero aspernatur. Nobis dignissimos molestias deserunt, nulla provident soluta.
+            Animi temporibus error, molestias esse itaque fuga sunt nostrum, autem facere dolorem delectus minus repellendus nam reprehenderit non, quisquam ducimus labore! Iste maiores ex neque nemo! Facere voluptate asperiores enim?
+            Eveniet explicabo repellat et. Magnam, aliquam. Ducimus, ab aut repellat voluptate aliquam, animi placeat ipsa exercitationem, magnam voluptas nostrum ea. Nemo voluptate, culpa eum facilis dolorem delectus perferendis corrupti odit?
+            Alias neque unde temporibus quo quasi sequi cumque at voluptates iste aspernatur ad cupiditate, perspiciatis consequuntur optio qui deserunt sunt eos possimus, similique ea accusamus nulla velit. Numquam, porro voluptatum!
+            Deserunt magn<br></p>
+    </div>
+    <footer>
+        <div class="container-fluid p-0">
+            <div class="row text-left">
+                <div class="col-md-5 col-sm-5">
+                    <h4 class="text-light">About us</h4>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea
+                        similique illum corrupti</p>
+                    <p class="pt-4 text-muted">Copyright ©2019 All rights reserved | Terms and conditions
+                    </p>
+                </div>
+                <div class="col-md-5 col-sm-12">
+                    <h4 class="text-light">Subscribe</h4>
+                    <p class="text-muted">Stay Updated</p>
+                    <form class="form-inline">
+                        <div class="col pl-0">
+                            <div class="input-group pr-5">
+                                <input type="text" class="form-control bg-dark text-white"
+                                    id="inlineFormInputGroupUsername2" placeholder="Email">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <h4 class="text-light">Follow Us</h4>
+                    <p class="text-muted">Let us be social</p>
+                    <div class="column text-light">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>   
 </body>
 </html>
